syntax = "proto3";

package envoy.config.cluster.aggregate.v2alpha;

import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.config.cluster.aggregate.v2alpha";
option java_outer_classname = "ClusterProto";
option java_multiple_files = true;

// [#protodoc-title: Aggregate cluster configuration]

// Configuration for the aggregate cluster. See the :ref:`architecture overview
// <arch_overview_aggregate_cluster>` for more information.
// [#extension: envoy.clusters.aggregate]
message ClusterConfig {
  // Load balancing clusters in aggregate cluster. Clusters are prioritized based on the order they
  // appear in this list.
  repeated string clusters = 1 [(validate.rules).repeated = {min_items: 1}];
}
